fix: to list -> collectors.tolist()