@@ -16,6 +16,7 @@ import net.app.savable.global.error.exception.GeneralException;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;import java.util.List;
+import java.util.stream.Collectors;
 
 import static net.app.savable.global.error.exception.ErrorCode.*;
 
@@ -28,7 +29,7 @@ public class ShopService {
     private final MemberRepository memberRepository;
     private final RewardHistoryRepository rewardHistoryRepository;
 
-//    @Cacheable(value="GiftcardList", key="#price", cacheManager="contentCacheManager")
+    @Cacheable(value="GiftcardList", key="#price", cacheManager="contentCacheManager")
     public List<GiftcardProductResponseDto> findGiftcardByInOnSale(Boolean inOnSale, Long price){
         Long minPrice;
         Long maxPrice;
@@ -45,7 +46,8 @@ public class ShopService {
                 = giftcardProductRepository.findGiftcardByInOnSaleAndPriceBetweenOrderByPriceAscBrandNameAsc(inOnSale,minPrice,maxPrice)
                 .stream()
                 .map(GiftcardProductResponseDto::valueOf)
-                .toList();
+//                .toList();
+                .collect(Collectors.toList());
         return giftcardList;
     }
 
